{
  "version": 4,
  "terraform_version": "1.16.0",
  "serial": 16,
  "lineage": "d72b12ae-b29b-5cec-7e73-f3d3f36ce7ba",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "express_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-01a00762f46d584a1",
            "arn": "arn:aws:ec2:ap-south-1:909133988285:instance/i-02fb104df588b4112",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02fb104df588b4112",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Part_Two",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-03600d97ed12f6703"
              }
            ],
            "primary_network_interface_id": "eni-03600d97ed12f6703",
            "private_dns": "ip-10-0-1-253.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.253",
            "public_dns": "ec2-52-66-195-61.ap-south-1.compute.amazonaws.com",
            "public_ip": "52.66.195.61",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-033376c9cf4962ac9",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ad3ffad3f4a85c82",
            "tags": {
              "Name": "Part_Two-Express-Server"
            },
            "tags_all": {
              "Name": "Part_Two-Express-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f1270135c433e63e"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "909133988285",
            "id": "i-02fb104df588b4112",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.express_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "flask_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-01a00762f46d584a1",
            "arn": "arn:aws:ec2:ap-south-1:909133988285:instance/i-0244ddeebcddce2a2",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0244ddeebcddce2a2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "Part_Two",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-074c14a53da056979"
              }
            ],
            "primary_network_interface_id": "eni-074c14a53da056979",
            "private_dns": "ip-10-0-1-139.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.139",
            "public_dns": "ec2-43-205-99-230.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.205.99.230",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-015ff712b5ccfe226",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ad3ffad3f4a85c82",
            "tags": {
              "Name": "Part_Two-Flask-Server"
            },
            "tags_all": {
              "Name": "Part_Two-Flask-Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-043086e831a21ded5"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "909133988285",
            "id": "i-0244ddeebcddce2a2",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.express_sg",
            "aws_security_group.flask_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:909133988285:internet-gateway/igw-0b6f9be519233bc73",
            "id": "igw-0b6f9be519233bc73",
            "owner_id": "909133988285",
            "region": "ap-south-1",
            "tags": {
              "Name": "Part_Two-IGW"
            },
            "tags_all": {
              "Name": "Part_Two-IGW"
            },
            "vpc_id": "vpc-0dad52464e1d1b743"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "909133988285",
            "id": "igw-0b6f9be519233bc73",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:909133988285:route-table/rtb-0a41338ce93aeb600",
            "id": "rtb-0a41338ce93aeb600",
            "owner_id": "909133988285",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b6f9be519233bc73",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Part_Two-Public-Route-Table"
            },
            "tags_all": {
              "Name": "Part_Two-Public-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dad52464e1d1b743"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "909133988285",
            "id": "rtb-0a41338ce93aeb600",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa4ed0eb7c3a9dde",
            "region": "ap-south-1",
            "route_table_id": "rtb-0a41338ce93aeb600",
            "subnet_id": "subnet-0ad3ffad3f4a85c82"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "909133988285",
            "id": "rtbassoc-0fa4ed0eb7c3a9dde",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "express_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:909133988285:security-group/sg-0f1270135c433e63e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f1270135c433e63e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "Part_Two-express-sg",
            "name_prefix": "",
            "owner_id": "909133988285",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Part_Two-express-sg"
            },
            "tags_all": {
              "Name": "Part_Two-express-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dad52464e1d1b743"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "909133988285",
            "id": "sg-0f1270135c433e63e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "flask_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:909133988285:security-group/sg-043086e831a21ded5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-043086e831a21ded5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f1270135c433e63e"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "Part_Two-flask-sg",
            "name_prefix": "",
            "owner_id": "909133988285",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Part_Two-flask-sg"
            },
            "tags_all": {
              "Name": "Part_Two-flask-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dad52464e1d1b743"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "909133988285",
            "id": "sg-043086e831a21ded5",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.express_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:909133988285:subnet/subnet-0ad3ffad3f4a85c82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ad3ffad3f4a85c82",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "909133988285",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "Part_Two-Public-Subnet"
            },
            "tags_all": {
              "Name": "Part_Two-Public-Subnet"
            },
            "vpc_id": "vpc-0dad52464e1d1b743"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "909133988285",
            "id": "subnet-0ad3ffad3f4a85c82",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:909133988285:vpc/vpc-0dad52464e1d1b743",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07b3f4183ff744f51",
            "default_route_table_id": "rtb-053f07be311befcb0",
            "default_security_group_id": "sg-0b944cfb207688cc5",
            "dhcp_options_id": "dopt-0afbb5756f90fec16",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dad52464e1d1b743",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-053f07be311befcb0",
            "owner_id": "909133988285",
            "region": "ap-south-1",
            "tags": {
              "Name": "Part_Two-VPC"
            },
            "tags_all": {
              "Name": "Part_Two-VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "909133988285",
            "id": "vpc-0dad52464e1d1b743",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}